Separated Home/Index & Dentist, Patient, Admin/Profile (added MyProfile button instead Home button). Added Sort and Search for GetPatients, GetDentist in Admin view. Edited Search for MyPatients in Dentist view.

--- a/WebApplication1/WebApplication1/Content/bootstrap.css
+++ b/WebApplication1/WebApplication1/Content/bootstrap.css
@@ -221,7 +221,7 @@ input[type="radio"] {
     width: 100%;
 }*/
 
-               /*#custom-search-input{
+               #custom-search-input{
                 padding: 1px;
                 border: solid 1px #E4E4E4;
                 border-radius: 6px;
@@ -251,7 +251,7 @@ input[type="radio"] {
 
             #custom-search-input .glyphicon-search{
                 font-size: 23px;
-            }*/
+            }
 
 input[type="search"] {
   -webkit-box-sizing: content-box;
