--- a/WebApplication1/WebApplication1/Views/Admin/GetDentist.cshtml
+++ b/WebApplication1/WebApplication1/Views/Admin/GetDentist.cshtml
@@ -4,28 +4,52 @@
     ViewBag.Title = "GetDentist";
 }
 
-<h2>GetDentist</h2>
+<h2>List Dentists</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New Dentist", "Create")
 </p>
+
+@using (@Html.BeginForm("GetDentist", "Admin", FormMethod.Get))
+{
+    @*HTML helper way of input for search
+        @Html.TextBox("searchString",null, new {id = "custom-search-input", @class = "form-control input"});*@
+
+    <div class="container" style="padding-left:0px; padding-right:0px">
+        <div class="row">
+            <div class="col-md-3">
+                <div id="custom-search-input">
+                    <div class="input-group">
+                        <input type="text" id="searchString" name="searchString" class="form-control input" placeholder="Search first and last name..." />
+                        <span class="input-group-btn">
+                            <button class="btn btn-info btn" type="button">
+                                <i class="glyphicon glyphicon-search"></i>
+                            </button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
 <div style="overflow-x:auto;">
     <table class="table">
         <thead class="thead-inverse">
             <tr>
-                <th >
-                    @Html.DisplayNameFor(model => model.FirstName)
+                <th>
+                    @Html.ActionLink("First Name", "GetDentist", new { sortOrder = ViewBag.NameSortParm })
                 </th>
-                <th >
-                    @Html.DisplayNameFor(model => model.LastName)
+                <th>
+                    @Html.ActionLink("Last Name", "GetDentist", new { sortOrder = ViewBag.LNameSortParm })
                 </th>
-                <th >
-                    @Html.DisplayNameFor(model => model.DateCreated)
+                <th>
+                    @Html.ActionLink("Date Created", "GetDentist", new { sortOrder = ViewBag.DateSortParm })
                 </th>
-                <th >
+                <th>
                     @Html.DisplayNameFor(model => model.Email)
                 </th>
-                <th >
+                <th>
                     @Html.DisplayNameFor(model => model.PhoneNumber)
                 </th>
                 <th>
@@ -35,35 +59,35 @@
             </tr>
         </thead>
 
-            @foreach (var item in Model)
+        @foreach (var item in Model)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.FirstName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.LastName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.DateCreated)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Email)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.PhoneNumber)
-                    </td>
-                    <td>
-                        @* @Html.DisplayNameFor(model => model.Schedule.Id) *@
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                    </td>
-                </tr>
-            }
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateCreated)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PhoneNumber)
+                </td>
+                <td>
+                    @* @Html.DisplayNameFor(model => model.Schedule.Id) *@
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            </tr>
+        }
 
-</table>
+    </table>
 </div>
 
