--- a/WebApplication1/WebApplication1/Views/Dentist/MyPatients.cshtml
+++ b/WebApplication1/WebApplication1/Views/Dentist/MyPatients.cshtml
@@ -9,28 +9,20 @@
 <h2>My patients</h2>
 
 <p style="text-decoration:underline">
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New Patient", "Create")
 </p>
 
 @using (@Html.BeginForm("MyPatients", "Dentist", FormMethod.Get))
 {
+    @*HTML helper way of input for search
+    @Html.TextBox("searchString",null, new {id = "custom-search-input", @class = "form-control input"});*@
 
-
-    @*<input type="text" name="search" placeholder="Search...">        ,null, new { @class = "tandara" }
-    <div class="form-group has-feedback">
-        <input type="text" class="form-control" id="inputSuccess2" />
-        <span class="glyphicon glyphicon-search form-control-feedback"></span>
-        @Html.TextBox("searchString",null, new {@type="text",@class="form-control",@id="inpuSuccess2"})
-    </div>*@
-
-    @Html.TextBox("searchString");          @*Right way of input for search*@
-
-    @*<div class="container">
+    <div class="container" style="padding-left:0px; padding-right:0px">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div id="custom-search-input">
                     <div class="input-group">
-                        <input type="text" class="form-control input" placeholder="Buscar" />
+                        <input type="text" id="searchString" name="searchString" class="form-control input" placeholder="Search first and last name..." />
                         <span class="input-group-btn">
                             <button class="btn btn-info btn" type="button">
                                 <i class="glyphicon glyphicon-search"></i>
@@ -40,9 +32,8 @@
                 </div>
             </div>
         </div>
-    </div>*@
+    </div>
 }
-
 
 <div style="overflow-x:auto;">
     <table class="table">
