Delete and Details functionality implemented and views updated

--- a/WebApplication1/WebApplication1/Views/Dentist/MyPatients.cshtml
+++ b/WebApplication1/WebApplication1/Views/Dentist/MyPatients.cshtml
@@ -3,7 +3,7 @@
 @model IEnumerable<WebApplication1.Models.Patient>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "My Patients";
 }
 
 <h2>My patients</h2>
