--- a/WebApplication1/WebApplication1/Views/Dentist/Details.cshtml
+++ b/WebApplication1/WebApplication1/Views/Dentist/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.Dentist
+﻿@model WebApplication1.Models.Patient
 
 @{
     ViewBag.Title = "Details";
@@ -152,22 +152,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.UserName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Place)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Place)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Schedule.Id)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Schedule.Id)
         </dd>
 
     </dl>
