--- a/WebApplication1/WebApplication1/Views/Dentist/MySchedule.cshtml
+++ b/WebApplication1/WebApplication1/Views/Dentist/MySchedule.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@using Kendo.Mvc.UI
+@using WebApplication1.Models
+
 @{
     ViewBag.Title = "MySchedule";
 }
@@ -6,3 +8,26 @@
 <h2>MySchedule</h2>
 <p>My schedule is still in progress, it will be soon InsaAllah!</p>
 
+@(Html.Kendo().Scheduler<Appointment>()
+      .Name("scheduler")
+      .Date(new DateTime(2013, 6, 13))
+      .StartTime(new DateTime(2013, 6, 13, 7, 00, 00))
+      .Height(600)
+      .Views(views =>
+      {
+          views.DayView();
+          views.WeekView();
+          views.MonthView();
+      })
+      .DataSource(d => d
+        .Model(m =>
+        {
+            m.Id(f => f.Id);
+            m.Field(f => f.Title).DefaultValue("No Title");
+            m.Field(f => f.Description).DefaultValue("No Description");
+        })
+        .Read("Read", "Scheduler")
+        
+      )
+
+ )
