--- a/WebApplication1/WebApplication1/Content/Css/CustomLogin.css
+++ b/WebApplication1/WebApplication1/Content/Css/CustomLogin.css
@@ -3,8 +3,8 @@
   display:block;
   background-color: #f7f7f7;
   -moz-box-shadow: 0 0 3px 3px #888;
-    -webkit-box-shadow: 0 0 3px 3px #888;
-	box-shadow: 0 0 3px 3px #888;
+  -webkit-box-shadow: 0 0 3px 3px #888;
+  box-shadow: 0 0 3px 3px #888;
   border-radius:8px;
 }
 .main{
@@ -41,8 +41,8 @@
 .form-signin .form-control {
   position: relative;
   font-size: 16px;
-  height: 20px;
-  padding: 20px;
+  height: 40px;
+  /*padding: 20px;*/
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
