--- a/WebApplication1/WebApplication1/Views/Account/Login.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/Login.cshtml
@@ -1,8 +1,8 @@
 ﻿@using WebApplication1.ViewModels.Account
 @model WebApplication1.ViewModels.Account.LoginViewModel
-    @{ 
-        Layout = "";
-    }
+@{
+    Layout = "";
+}
 
 
 <html>
@@ -12,70 +12,69 @@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    
+
     <style>
         body {
-            
             background-image: url('../../Content/Images/download_bg.jpg');
             background-position: center top;
             background-size: 100% auto;
-            opacity: 0.94;
+            opacity: 0.9;
         }
     </style>
 
 </head>
 <body>
     <div class="container">
-        
-        <div class="row">
-            <form method="post" class="form-signin mg-btm">
-                <h3 class="heading-desc">
+            <div class="row" style="position: absolute; margin: -200px 0 0 -200px; top: 50%; left: 50%">
+                <form method="post" class="form-signin mg-btm">
+                    <h3 class="heading-desc">
 
-                    Login to DentisCard
-                </h3>
-                <div class="social-box">
-                    <div class="row mg-btm">
-                        <div class="col-md-12">
-                            <a href="#" class="btn btn-primary btn-block">
-                                <i class="icon-facebook"></i>    Login with Facebook
-                            </a>
-                        </div>
-                    </div>
-                   
-                </div>
-                @Html.AntiForgeryToken()
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="main">
-                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Email" })
-                    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password" })
-                    @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-
-                    <span class="clearfix"></span>
-                </div>
-               
-                <div class="login-footer">
-                    <div class="row">
-                        <div class="col-xs-6 col-md-6">
-                            <div class="left-section">
-                                <a href="">Forgot your password?</a>
-                                @Html.ActionLink("Sign up now", "Register", "Dentist")
+                        Login to DentisCard
+                    </h3>
+                    <div class="social-box">
+                        <div class="row mg-btm">
+                            <div class="col-md-12">
+                                <a href="#" class="btn btn-primary btn-block">
+                                    <i class="icon-facebook"></i>    Login with Facebook
+                                </a>
                             </div>
                         </div>
-                        <div class="col-xs-6 col-md-6 pull-right">
-                            <button type="submit" class="btn btn-large btn-success pull-right">Login</button>
-                        </div>
+
+                    </div>
+                    @Html.AntiForgeryToken()
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="main">
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Email" })
+                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password" })
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+
+                        <span class="clearfix"></span>
                     </div>
 
-                </div>
-            </form>
+                    <div class="login-footer">
+                        <div class="row">
+                            <div class="col-xs-6 col-md-6">
+                                <div class="left-section">
+                                    <a href="">Forgot your password?</a>
+                                    @Html.ActionLink("Sign up now", "Register", "Dentist")
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-md-6 pull-right">
+                                <button type="submit" class="btn btn-large btn-success pull-right">Login</button>
+                            </div>
+                        </div>
+
+                    </div>
+                </form>
+            
         </div>
     </div>
 </body>
 </html>
 
-    @section Scripts
+@section Scripts
 {
-        @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jqueryval")
 
-    }
+}
