--- a/WebApplication1/WebApplication1/Views/Dentist/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Dentist/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+@model WebApplication1.Models.Dentist
 <head>
     <link href="~/Content/css/CustomLeftNavbar.css" rel="stylesheet" />
     <link href="~/Content/css/CustomProfile.css" rel="stylesheet" />
@@ -10,21 +11,20 @@
 <div class="container my-custom-container">
 <div class="profile-head">
 <div class="col-md- col-sm-4 col-xs-12">
-<img src="http://www.newlifefamilychiropractic.net/wp-content/uploads/2014/07/300x300.gif" class="img-responsive" />
-    <h6>User Name
+    <img src="~/Content/Images/DSC00261.JPG" class="img-responsive" />
+    <h6>@Html.DisplayFor(d => d.FirstName)
+        @Html.DisplayFor(d => d.LastName)
     </h6>
 </div>
 
 <div class="col-md-5 col-sm-5 col-xs-12">
-<h5>User Name</h5>
+<h5>@Html.DisplayFor(d => d.FirstName) @Html.DisplayFor(d => d.LastName)</h5> 
 <p>Dentist </p>
 <ul>
-
-<li><span class="glyphicon glyphicon-briefcase"></span> 5 years</li>
-<li><span class="glyphicon glyphicon-map-marker"></span> BiH</li>
-<li><span class="glyphicon glyphicon-home"></span> Ilidza.</li>
-<li><span class="glyphicon glyphicon-phone"></span> <a href="#" title="call">387612345678</a></li>
-<li><span class="glyphicon glyphicon-envelope"></span><a href="#" title="mail">dentisCard@gmail.com</a></li>
+<li><span class="glyphicon glyphicon-gift"></span>@Html.DisplayFor(model=> model.DateOfBirth)</li>
+<li><span class="glyphicon glyphicon-home"></span>@Html.DisplayFor(model => model.Address)</li>
+<li><span class="glyphicon glyphicon-phone"></span> <a href="#" title="call">061123456789</a></li>
+<li><span class="glyphicon glyphicon-envelope"></span><a href="#" title="mail">@Html.DisplayFor(model => model.Email)</a></li>
 
 </ul>
 </div>
