--- a/WebApplication1/WebApplication1/Views/Dentist/EditMyProfile.cshtml
+++ b/WebApplication1/WebApplication1/Views/Dentist/EditMyProfile.cshtml
@@ -8,7 +8,7 @@
 <h2>Edit my profile</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("EditMyProfile", "Dentist", FormMethod.Post, new {  enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
@@ -167,6 +167,14 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.UserPhoto, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+
+                <input type="file" name="UserPhoto" id="fileUpload" accept=".png,.jpg,.jpeg,.gif,.tif" />
+
             </div>
         </div>
 
