--- a/WebApplication1/WebApplication1/Views/Dentist/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Dentist/Index.cshtml
@@ -137,7 +137,8 @@
                             <table class="table">
                                 <tr>
                                     <td>
-                                        <span class="glyphicon glyphicon-cog"></span><a>Edit account</a>
+                                        <span class="glyphicon glyphicon-cog"></span>
+                                        @Html.ActionLink("Edit account", "EditMyProfile", "Dentist")
                                        
                                     </td>
                                 </tr>
